--- a/todos/static/css/todo_form.css
+++ b/todos/static/css/todo_form.css
@@ -43,6 +43,7 @@ main {
   display: flex;
   justify-content: center;
   margin: 10px 0;
+  height: 40%;
 }
 
 .container {
@@ -66,13 +67,13 @@ label{
 
 input[type="text"],
 input[type="number"],
-input[type="submit"] {
-  width: 99%;
-  padding: 8px;
-  margin: 15px;
+.custom-select {
+  width: 98%;
   border: 1px solid #ccc;
   border-radius: 3px;
   box-sizing: border-box;
+  margin: 10px;
+  padding: 10px;
   font-size: 20px;
 }
 
@@ -82,7 +83,7 @@ main a {
   text-decoration: none;
   font-size: 20px;
   padding: 8px 12px;
-  margin: 0 5px;
+  margin: 20px 5px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -100,25 +101,19 @@ main a {
 }
 
 
-.custom-select {
-  width: 100%;
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  padding: 8px 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #fff;
-  font-size: 16px;
-  cursor: pointer;
-  margin-top: 5px;
-  margin-bottom: 30px;
-  display: block;
-  font-size: 20px;
-}
-
 .custom-select:hover {
   background-color: #f9f9f9;
+}
+
+.custom-select::after{
+  content: '\25BC'; /* Código Unicode para a seta */
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  pointer-events: none;
+  transform: translateY(-50%);
+  font-size: 12px;
+  color: #333;
 }
 
 .custom-select:focus {
