--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -3,34 +3,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Gerenciamento de Almoxarifado</title>
   
-  <link rel="stylesheet" href="{% static 'css/todo_list.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/todo_list.css' %}">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900display=swap" rel="stylesheet">
 </head>
 <body>
 
   <header>
-    <a href="{% url 'todo_list' %}"> <h2>Gerenciador de Almoxarifado</h2> </a>
-    {% comment %} <a class="button_logout" href="{% url 'logout' %}"> SAIR </a> {% endcomment %}
-    <form method="POST" action="{% url 'logout' %}">
+    <a href="{% url 'todo_list' %}"> <h2>Gerenciador de Almoxarifado</h2></a>
+    <form method="post" action="{% url 'logout' %}">
       {% csrf_token %}
-      <button type="submit">Logout</button>
+      <button class="button_logout" type="submit">SAIR</button>
   </header>
 
   <main>
-
-    <h1>Lista de Itens </h1>
-
+    <h1>Lista de Itens</h1>
     {% if todo_list %}
       <table class="table-items">
-        <thead>
+        <thead>   
           <tr>
             <th scope="col">Unidades</th>
             <th scope="col">Título</th>
@@ -61,8 +55,6 @@
 
     <a href="{% url 'todo_create' %}" class="btn btn-cadastrar">Cadastrar Item</a>
   </main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 </html>
 
