--- a/items/staticfiles/css/items_form.css
+++ b/items/staticfiles/css/items_form.css
@@ -15,10 +15,10 @@ html {
 
 header {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   height: 80px;
   padding: 10px;
-  align-items: center;
-  justify-content: space-between;
   background-color: #07A0C3;
   border: 2px solid black;
 
@@ -43,17 +43,19 @@ main {
   display: flex;
   justify-content: center;
   margin: 10px 0;
-  height: 40%;
+  height: auto;
 }
 
 .container {
   width: 80%;
+  height: 100%;
   padding: 20px;
   display: flex;
   flex-direction: column;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
 .container h1{
   margin-bottom: 20px;
   color: black;
@@ -67,7 +69,7 @@ label{
 
 input[type="text"],
 input[type="number"],
-.custom-select {
+form .form-control{
   width: 98%;
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -75,6 +77,13 @@ input[type="number"],
   margin: 10px;
   padding: 10px;
   font-size: 20px;
+}
+
+.form-label {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 5px;
+  color: #333;
 }
 
 main .btn,
@@ -95,34 +104,7 @@ main .btn-save{
   color: black;
 }
 
-main a {
+form .btn-cancelar {
   background-color: red;
   color: black;
-}
-
-
-.custom-select:hover {
-  background-color: #f9f9f9;
-}
-
-.custom-select::after{
-  content: '\25BC'; /* Código Unicode para a seta */
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  pointer-events: none;
-  transform: translateY(-50%);
-  font-size: 12px;
-  color: #333;
-}
-
-.custom-select:focus {
-  outline: none;
-  border-color: #007bff;
-}
-
-.custom-select:disabled {
-  background-color: #f2f2f2;
-  color: #999;
-  cursor: not-allowed;
 }
