--- a/items/templates/items/items_form.html
+++ b/items/templates/items/items_form.html
@@ -10,7 +10,12 @@
   
   <title>Gerenciamento de Almoxarifado</title>
   
-  <link rel="stylesheet" type="text/css" href="{% static 'css/items_cad.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/items_form.css' %}">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
 </head>
 <body>
 
@@ -33,6 +38,46 @@
         <a href="{% url 'items_main' %}" class="btn btn-cancelar">Cancelar</a>
       </form>
     </div>
+
+    <script type="text/javascript">
+      $(document).ready(function() {
+          $('#id_category').change(function() {
+              var category = $(this).val();
+              $.ajax({
+                  url: '{% url "ajax-load-subcategories" %}',
+                  data: {
+                      'category': category
+                  },
+                  success: function(data) {
+                      var $subCategory = $('#id_sub_category');
+                      $subCategory.empty();
+                      {% comment %} $subCategory.append('<option value="">Selecione</option>'); {% endcomment %}
+                      $.each(data, function(index, value) {
+                        $subCategory.append($('<option></option>').attr('value', value).text(value));
+                      });
+                  }
+              });
+          });
+
+          var initialCategory = $('#id_category').val();
+          if (initialCategory) {
+              $.ajax({
+                  url: '{% url "ajax-load-subcategories" %}',
+                  data: {
+                      'category': initialCategory
+                  },
+                  success: function(data) {
+                      var $subCategory = $('#id_sub_category');
+                      $subCategory.empty();
+                      $subCategory.append('<option value="">Selecione</option>');
+                      $.each(data, function(index, value) {
+                          $subCategory.append('<option value="' + value + '">' + value + '</option>');
+                      });
+                  }
+              });
+          }
+      });
+  </script>
   </main>
 </body>
 </html>
