--- a/items/templates/items/items_form.html
+++ b/items/templates/items/items_form.html
@@ -4,32 +4,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <title>Gerenciamento de Almoxarifado</title>
-  
   <link rel="stylesheet" type="text/css" href="{% static 'css/items_form.css' %}">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
 </head>
 <body>
-
   <header>
-    <a href="{% url 'items_main' %}"> <h2>Gerenciador de Almoxarifado</h2></a>
-    <a class="button_logout" href="{% url 'login' %}"> SAIR </a>
+    <a href="{% url 'items_main' %}"><h2>Gerenciador de Almoxarifado</h2></a>
+    <a class="button_logout" href="{% url 'login' %}">SAIR</a>
   </header>
-
   <main>
     <div class="container">
       {% if items.pk %}
         <h1>Editar Item</h1>
       {% else %}
-        <h1>Novo Item </h1> 
+        <h1>Novo Item</h1>
       {% endif %}
       <form method="POST">
         {% csrf_token %}
@@ -37,13 +28,6 @@
         <button type="submit" class="btn btn-save">Salvar</button>
         <a href="{% url 'items_main' %}" class="btn btn-cancelar">Cancelar</a>
       </form>
-      {% if messages %}
-        <ul>
-          {% for message in messages %}
-              <li class="alert alert-info">{{ message }}</li>
-          {% endfor %}
-        </ul>
-        {% endif %}
     </div>
     <script type="text/javascript">
       $(document).ready(function() {
@@ -51,9 +35,7 @@
           var category = $(this).val();
           $.ajax({
             url: '{% url "ajax-load-subcategories" %}',
-            data: {
-              'category': category
-            },
+            data: {'category': category},
             success: function(data) {
               var $subCategory = $('#id_sub_category');
               $subCategory.empty();
@@ -64,13 +46,12 @@
             }
           });
         });
+
         var initialCategory = $('#id_category').val();
         if (initialCategory) {
           $.ajax({
             url: '{% url "ajax-load-subcategories" %}',
-            data: {
-                'category': initialCategory
-            },
+            data: {'category': initialCategory},
             success: function(data) {
               var $subCategory = $('#id_sub_category');
               $subCategory.empty();
@@ -86,7 +67,3 @@
   </main>
 </body>
 </html>
-
-    
-
-
