--- a/items/templates/items/items_main.html
+++ b/items/templates/items/items_main.html
@@ -5,13 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <title>Gerenciamento de Almoxarifado</title>
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="icon" type="image/x-icon" href="{% static "css/todos/favicon.ico" %}">
   <link rel="stylesheet" href="{% static 'css/items_main.css' %}">
-  <script src="{% static 'js/items_stock.js' %}"></script>
   
 </head>
 <body>
@@ -22,193 +17,40 @@
       {% csrf_token %}
       <button class="button_logout" type="submit">SAIR</button>
   </header>
-
   <main>
-    <h1 class="titulo">Lista de Itens</h1>
+    <h1>Lista de Itens</h1>
     {% if items_list %}
       <form >
-        <div class="expandable-list">
-          <div class="item">
-            <div class="header" onclick="toggleContent(this)">
-                <span class="arrow">&#9654;</span> 
-                <h1>Material para instalação</h1>
-            </div>
-            <div class="content">
-              {% for item in items_list %}
-                {% if item.category == "Material para instalação" %}
-                  <div class="item-row">
-                    <div class="dados_items">
-                      <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
-                      </div>
-                    </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' pk=item.pk %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' pk=item.pk %}" class="btn btn-delete">Excluir</a>
-                      <a class="btn btn-retirar {% if todo.finished_at %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
-                  </div>
-                {% endif %}
-              {% endfor %}
-              {% if not has_material_instalacao %}
-                <div>
-                  <p>Não há itens cadastrados para a categoria <strong>"Material para instalação"<strong/>.</p>
-                </div>
-              {% endif %}
-            </div>
-          </div>            
-          <div class="item">
-            <div class="header" onclick="toggleContent(this)">
-                <span class="arrow">&#9654;</span> 
-                <h1>Informática</h1>
-            </div>
-            <div class="content">
-              {% for item in items_list %}
-                {% if item.category == "Informática" %}
-                  <div class="item-row">
-                    <div class="dados_items">
-                      <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
-                      </div>
-                    </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' pk=item.pk %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' pk=item.pk %}" class="btn btn-delete">Excluir</a>
-                      <a class="btn btn-retirar {% if todo.finished_at %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
-                  </div>
-                {% endif %}
-              {% endfor %}
-              {% if not has_informatica %}
-                <div>
-                  <p>Não há itens cadastrados para a categoria <strong>"Informática"<strong/>.</p>
-                </div>
-              {% endif %}
-            </div>
-          </div>   
-          <div class="item">
-            <div class="header" onclick="toggleContent(this)">
-                <span class="arrow">&#9654;</span> 
-                <h1>Ferramentas</h1>
-            </div>
-            <div class="content">
-              {% for item in items_list %}
-                {% if item.category == "Ferramentas" %}
-                  <div class="item-row">
-                    <div class="dados_items">
-                      <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
-                      </div>
-                    </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' pk=item.pk %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' pk=item.pk %}" class="btn btn-delete">Excluir</a>
-                      <a class="btn btn-retirar {% if todo.finished_at %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
-                  </div>
-                {% endif %}
-              {% endfor %}
-              {% if not has_ferramentas %}
-                <div>
-                  <p>Não há itens cadastrados para a categoria <strong>"Ferramentas"<strong/>.</p>
-                </div>
-              {% endif %}
-            </div>
-          </div>   
-          <div class="item">
-            <div class="header" onclick="toggleContent(this)">
-                <span class="arrow">&#9654;</span> 
-                <h1>Material de consumo</h1>
-            </div>
-            <div class="content">
-              {% for item in items_list %}
-                {% if item.category == "Material de consumo" %}
-                  <div class="item-row">
-                    <div class="dados_items">
-                      <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
-                      </div>
-                    </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' pk=item.pk %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' pk=item.pk %}" class="btn btn-delete">Excluir</a>
-                      <a class="btn btn-retirar {% if todo.finished_at %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
-                  </div>
-                {% endif %}
-              {% endfor %}
-              {% if not has_material_consumo%}
-                <div>
-                  <p>Não há itens cadastrados para a categoria <strong>"Material de consumo"<strong/>.</p>
-                </div>
-              {% endif %}
-            </div>
-          </div>  
-          <div class="item">
-            <div class="header" onclick="toggleContent(this)">
-                <span class="arrow">&#9654;</span> 
-                <h1>Para descarte</h1>
-            </div>
-            <div class="content">
-              {% for item in items_list %}
-                {% if item.category == "Descarte" %}
-                  <div class="item-row">
-                    <div class="dados_items">
-                      <div class="description">
-                        <p><strong>Entrada no estoque:</strong> {{item.create_at}}</p>
-                        <p>{{item.quantity}} UNIDADE - {{ item.name }} | Marca: {{item.brand}} | Modelo: {{item.model}}</p>
-                      </div>
-                    </div>
-                    <div class="acoes">
-                      <a href="{% url 'items_update' pk=item.pk %}" class="btn btn-edit">Editar</a>
-                      <a href="{% url 'items_delete' pk=item.pk %}" class="btn btn-delete">Excluir</a>
-                      <a class="btn btn-retirar {% if todo.finished_at %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                    </div>
-                  </div>
-                {% endif %}
-              {% endfor %}
-              {% if not has_descarte %}
-                <div>
-                  <p>Não há itens cadastrados para a categoria <strong>"Descarte"<strong/>.</p>
-                </div>
-              {% endif %}
-            </div>
-          </div>  
+        <div class="expandable-list">  
+          <ul>
+            {% if has_material_intalacao %}
+              <a href="{% url 'items_material_instalacao' "Material para instalação" %}"> Material para instalação </a>
+            {% else %}
+              <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria <strong>Material para instalação</strong></a>
+            {% endif %}
+            {% if has_informatica %}
+              <a  href="{% url 'items_informatica' "Informática" %}">Informática</a>
+            {% else %}
+              <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria <strong>Informática</strong></a>
+            {% endif %}
+            {% if has_material_consumo %}
+              <a  href="{% url 'items_material_consumo' "Material de Consumo" %}">Material para consumo</a>
+            {% else %}
+              <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria <strong>Material para consumo</strong></a>
+            {% endif %}
+            {% if has_descarte %}
+              <a  href="{% url 'items_descarte' "Descarte" %}">Descarte</a>
+            {% else %}
+              <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria<strong>"Descarte"</strong></a>
+            {% endif %}
+            {% if has_ferramenta %}
+              <a href="{% url 'items_ferramentas' "Ferramenta" %}"> Ferramentas</a>
+            {% else %}
+              <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria <strong>Ferramentas</strong></a>
+            {% endif %}
+          </ul>
         </div>
       </form>
-      {% if form.errors %}
-        <ul>
-          {% for field, errors in form.errors.items %}
-              <li>{{ field }}: {{ errors|join:", " }}</li>
-          {% endfor %}
-        </ul>
-    {% endif %}
-      <script>
-        document.addEventListener('DOMContentLoaded', function () {
-          console.log('Script carregado!');
-          const checkboxes = document.querySelectorAll('.select-row');
-          checkboxes.forEach(function (checkbox) {
-            checkbox.addEventListener('change', function () {
-              const row = this.closest('tr');
-              if (this.checked) {
-                row.classList.add('selected');
-                checkboxes.forEach(function (cb) {
-                  if (cb !== checkbox) {
-                      cb.checked = false;
-                      cb.closest('tr').classList.remove('selected')
-                  }
-                });
-              } else {
-                row.classList.remove('selected');
-                }
-            });
-          });
-        });
-      </script>
     {% else %}
       <p class="notifications_no_items">Não há itens cadastradas.</p>
     {% endif %}
@@ -216,10 +58,3 @@
   </main>
 </body>
 </html>
-
-
-
-
-
-  
-  
