--- a/items/staticfiles/css/items_delete.css
+++ b/items/staticfiles/css/items_delete.css
@@ -1,41 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
-}
-
-body,
-html {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-header {
-  display: flex;
-  height: 80px;
-  padding: 10px;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #07A0C3;
-  border: 2px solid black;
-}
-
-header a {
-  font-size: 20px;
-  text-decoration-line: none;
-  color: black;
-}
-
-header .button_logout {
-  background-color: red;
-  border-radius: 5px;
-  padding: 5px 20px;
-  color: white;
-}
-
 main {
   height: 100%;
   display: flex;
@@ -46,15 +8,16 @@ main {
 }
 
 .container {
-  height: 70%;
-  width: 100%;
-  max-width: 700px;
+  height: 40%;
+  width: 80%;
+  max-width: 900px;
+  gap: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  align-items: center;
   box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 40px;
 }
 
 .container h1 {
@@ -67,7 +30,6 @@ main {
   text-align: center;
   text-decoration: none;
   font-size: 1.25rem;
-  font-weight: bold;
   padding: 8px 12px;
   margin: 0 5px;
   border: none;
