--- a/items/staticfiles/css/items_form.css
+++ b/items/staticfiles/css/items_form.css
@@ -1,46 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-}
-
-body,
-html {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  font-family: 'Roboto', sans-serif;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 80px;
-  padding: 10px;
-  background-color: #07A0C3;
-  border: 2px solid black;
-
-}
-
-header a {
-  font-size: 20px;
-  text-decoration-line: none;
-  color: black;
-}
-
-header .button_logout {
-
-  background-color: red;
-  border-radius: 5px;
-  padding: 5px 20px;
-
-  color: white;
-}
-
 main {
   display: flex;
   justify-content: center;
@@ -49,39 +6,39 @@ main {
 }
 
 .container {
-  width: 60%;
+  width: 80%;
+  max-width: 800px;
   margin: 50px;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.container h1{
+.container h1 {
   margin-bottom: 20px;
   color: black;
 }
 
-label{
+label {
   color: black;
-  font-size: 20px;
+  font-size: 18px;
 }
-
 
 input[type="text"],
 input[type="number"],
-form .form-control{
-  width: 98%;
+form .form-control {
+  width: 100%;
   border: 1px solid #ccc;
   border-radius: 3px;
   box-sizing: border-box;
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 10px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .form-label {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
   margin: 5px;
   color: #333;
@@ -91,7 +48,7 @@ main .btn,
 main a {
   text-align: center;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   padding: 8px 12px;
   margin: 20px 5px;
   border: none;
@@ -100,7 +57,7 @@ main a {
   display: inline-block;
 }
 
-main .btn-save{
+main .btn-save {
   background-color: green;
   color: black;
 }
@@ -108,4 +65,71 @@ main .btn-save{
 form .btn-cancelar {
   background-color: red;
   color: black;
+}
+
+/* Media Queries para dispositivos menores */
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+  }
+
+  header a {
+    font-size: 18px;
+  }
+
+  header .button_logout {
+    padding: 5px 15px;
+  }
+
+  .container {
+    width: 90%;
+    margin: 30px;
+  }
+
+  input[type="text"],
+  input[type="number"],
+  form .form-control {
+    font-size: 16px;
+  }
+
+  label,
+  .form-label {
+    font-size: 16px;
+  }
+
+  main .btn,
+  main a {
+    font-size: 16px;
+    padding: 6px 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  header a {
+    font-size: 16px;
+  }
+
+  .container {
+    width: 100%;
+    margin: 20px;
+  }
+
+  input[type="text"],
+  input[type="number"],
+  form .form-control {
+    font-size: 14px;
+  }
+
+  label,
+  .form-label {
+    font-size: 14px;
+  }
+
+  main .btn,
+  main a {
+    font-size: 14px;
+    padding: 5px 8px;
+  }
 }
