--- a/items/staticfiles/css/items_form_retirar.css
+++ b/items/staticfiles/css/items_form_retirar.css
@@ -1,44 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-}
-
-body,
-html {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  background-color: white;
-  font-family: 'Roboto', sans-serif;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 80px;
-  padding: 10px;
-  background-color: #07A0C3;
-  border: 2px solid black;
-
-}
-
-header a {
-  font-size: 20px;
-  text-decoration-line: none;
-  color: black;
-}
-
-header .button_logout {
-  background-color: red;
-  border-radius: 5px;
-  padding: 5px 20px;
-  color: white;
-}
-
 main {
   height: 100%;
   display: flex;
@@ -48,51 +7,58 @@ main {
 }
 
 .container {
-  height: 50%;
-  width: 50%;
+  height: 40%;
+  width: 80%;
+  max-width: 900px;
+  gap: 20px;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  align-content: space-around;
+  align-items: center;
   box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
+  padding: 40px;
 }
 
-.container h1{
-  font-size: 40px;
+.container h1 {
+  font-size: 30px;
   margin-bottom: 20px;
   color: black;
+  font-weight: bold;
 }
 
 .container p {
-  font-size: 25px;
+  font-size: 20px;
   margin-bottom: 10px;
 }
 
-.form-group label{
-  font-size: 20px;
+.container p span{
+  font-weight: bold;
+}
+
+
+.form-group label {
+  font-size: 18px;
   font-weight: bold;
   color: black;
-  
 }
 
 input[type="text"],
 input[type="number"],
-form .form-control{
+form .form-control {
   width: 100%;
   margin-top: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
   box-sizing: border-box;
   padding: 10px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 main .btn,
 main a {
   text-align: center;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   padding: 8px 12px;
   margin: 20px 5px;
   border: none;
@@ -101,7 +67,7 @@ main a {
   display: inline-block;
 }
 
-main .btn-save{
+main .btn-save {
   background-color: green;
   color: black;
 }
@@ -114,7 +80,7 @@ main .btn-cancelar {
 .error-list,
 .error-messages {
   color: #ff0000;
-  font-size: 20px;
+  font-size: 16px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -124,4 +90,90 @@ main .btn-cancelar {
 .non-field-error {
   margin: 0;
   padding: 0;
+}
+
+/* Media Queries para dispositivos menores */
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+  }
+
+  header a {
+    font-size: 18px;
+  }
+
+  header .button_logout {
+    padding: 5px 15px;
+  }
+
+  .container {
+    width: 90%;
+    padding: 15px;
+  }
+
+  .container h1 {
+    font-size: 25px;
+  }
+
+  .container p {
+    font-size: 18px;
+  }
+
+  input[type="text"],
+  input[type="number"],
+  form .form-control {
+    font-size: 16px;
+  }
+
+  label {
+    font-size: 16px;
+  }
+
+  main .btn,
+  main a {
+    font-size: 16px;
+    padding: 6px 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  header a {
+    font-size: 16px;
+  }
+
+  .container {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .container h1 {
+    font-size: 20px;
+  }
+
+  .container p {
+    font-size: 16px;
+  }
+
+  input[type="text"],
+  input[type="number"],
+  form .form-control {
+    font-size: 14px;
+  }
+
+  label {
+    font-size: 14px;
+  }
+
+  main .btn,
+  main a {
+    font-size: 14px;
+    padding: 5px 8px;
+  }
+
+  .error-list,
+  .error-messages {
+    font-size: 14px;
+  }
 }
