--- a/items/staticfiles/css/items_sub.css
+++ b/items/staticfiles/css/items_sub.css
@@ -1,48 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-}
-
-body,
-html {
-  background-color: white;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-header {
-  display: flex;
-  height: 80px;
-  padding: 10px;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #07A0C3;
-  border: 2px solid black;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
-header a {
-  font-size: 20px;
-  text-decoration-line: none;
-  color: black;
-}
-
-header .button_logout {
-  background-color: red;
-  border-radius: 5px;
-  padding: 5px 20px;
-  color: white;
-}
-
 main {
   flex: 1;
   padding: 100px 20px 20px;
@@ -64,7 +19,7 @@ main {
 }
 
 .container .arrow{
-  font-size: 30px;
+  font-size: 1.5rem;
 }
 
 .container .titulo{
@@ -101,6 +56,11 @@ main {
   display: inline-block;
   width: 20px;
   transition: transform 0.3s;
+  align-self: center;
+}
+
+.container .expandable-list .header h1{
+  font-size: 1.9rem;
 }
 
 .expandable-list .content {
