--- a/items/staticfiles/css/login.css
+++ b/items/staticfiles/css/login.css
@@ -1,35 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body,
-html {
-  background-color: white;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  font-family: 'Roboto', sans-serif;
-}
-
-header {
-  display: flex;
-  height: 80px;
-  padding: 10px;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #07A0C3;
-  border: 2px solid black;
-
-}
-
-header h1 {
-  font-size: 30px;
-  color: black;
-}
-
 main {
   display: flex;
   flex-direction: column;
@@ -40,8 +8,9 @@ main {
 }
 
 main .container-main {
-  width: 50%;
-  height: 50%;
+  width: 80%;
+  max-width: 600px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,35 +20,35 @@ main .container-main {
 }
 
 .container-main h1 {
-  font-size: 50px;
-  margin: 50px 0;
+  font-size: 40px;
+  margin: 30px 0;
 }
 
-label{
+label {
   color: black;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 form {
-  width: 50%;
+  width: 100%;
 }
 
 input[type="text"],
 input[type="password"],
 input[type="submit"] {
-  width: 90%;
+  width: 100%;
   border: 1px solid #ccc;
   border-radius: 3px;
   box-sizing: border-box;
-  margin: 10px;
+  margin: 10px 0;
   padding: 10px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .container-main .btn {
   text-align: center;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   padding: 8px 12px;
   margin: 20px 5px;
   border: none;
@@ -88,8 +57,63 @@ input[type="submit"] {
   display: inline-block;
 }
 
-.container-main .btn-login{
-
+.container-main .btn-login {
   background-color: green;
   color: black;
+}
+
+/* Media Queries para dispositivos menores */
+@media (max-width: 768px) {
+  header h1 {
+    font-size: 24px;
+  }
+
+  .container-main h1 {
+    font-size: 32px;
+  }
+
+  input[type="text"],
+  input[type="password"],
+  input[type="submit"] {
+    font-size: 16px;
+  }
+
+  label {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  header {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+  }
+
+  header h1 {
+    font-size: 20px;
+  }
+
+  .container-main h1 {
+    font-size: 28px;
+  }
+
+  .container-main {
+    width: 90%;
+  }
+
+  input[type="text"],
+  input[type="password"],
+  input[type="submit"] {
+    font-size: 14px;
+  }
+
+  label {
+    font-size: 14px;
+  }
+
+  .container-main .btn {
+    font-size: 16px;
+    padding: 6px 10px;
+  }
 }
