--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -5,16 +5,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>{% block title %}Gerenciamento de Almoxarifado{% endblock %}</title>
+
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-  {% block stylesheet %}<link rel="stylesheet" type="text/css" href="{% static 'css/default.css' %}">{% endblock %}
+  <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+  {% block extra_styles %}
+  {% endblock %}
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="{% static 'js/funcoes.js' %}"></script>
-  {% block extra_head %}{% endblock %}
+
 </head>
 <body>
   <header>
-    <a href="{% url 'items_main' %}"><h2>Gerenciador de Almoxarifado</h2></a>
+    <a href="{% url 'items_main' %}">
+      <img  src="{% static "img/foto-logo-din.png" %}" alt="Logo"  style="height: 80px;margin-top: 10px">
+    </a>
     <a class="button_logout" href="{% url 'login' %}">SAIR</a>
   </header>
   
