--- a/items/templates/items/items_confirm_delete.html
+++ b/items/templates/items/items_confirm_delete.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}Deletar de Itens{% endblock %}
-{% block stylesheet %}
+{% block extra_styles %}
   <link rel="stylesheet" href="{% static 'css/items_delete.css' %}">
 {% endblock %}
 
