--- a/items/templates/items/items_form.html
+++ b/items/templates/items/items_form.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block title %}Cadastro de Itens{% endblock %}
-{% block stylesheet %}
+{% block extra_styles %}
   <link rel="stylesheet" href="{% static 'css/items_form.css' %}">
 {% endblock %}
 
