--- a/items/templates/items/pag_subs_category/items_material_instalacao.html
+++ b/items/templates/items/pag_subs_category/items_material_instalacao.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}Sub Itens{% endblock %}
-{% block stylesheet %}
+{% block extra_styles %}
   <link rel="stylesheet" href="{% static 'css/items_sub.css' %}">
 {% endblock %}
 
